--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">MY WEBSITE</a></li>
-              <li><a href="Main.html">HOME</a></li>
+              <li><a href="Home.html">HOME</a></li>
               <li><a href="experience.html">EXPERIENCE</a></li>
               <li><a href="Transcrip.html">TRAINSCRIPT</a></li>
             </ul>
@@ -46,6 +46,7 @@
 </section>
 
 <section class="grid-2">
+    <div class="grid-lr">
     <div class="item-leftt">
         <h3>Personal infomation</h3>
             <ul>
@@ -117,7 +118,7 @@
             </div>
         </div>
     </div>
-    
+    </div>
 </section>     
 </body>
 </html>
