--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
       </div>
        <div class="tab-navigation">
             <ul class="tab-menu">
-                <li><a href="Main.html">HOME</a></li>
+              <li><a href="Home.html">HOME</a></li>
             </ul>
        </div>
       
