--- a/Home.html
+++ b/Home.html
@@ -36,10 +36,9 @@
 <div class="content">
   <div class="header-info">
       <h1>INDRODUCE </h1>
-      <p> My name is Rattiyakorn  Srisai. My nickname is Patty. I am twenty-three years old.
-        My name is Jiranuwat Kobkasikam. My nickname is Aum. I am twenty-three years old.
-        I am a senior year instrumentation and Electronic engineering student at King Mongkut’s university of technology north Bangkok.
-        In my free time, I’d like to watch YouTube, watch Movie, listen to music.</p>
+      <p> My name is Rattiyakorn  Srisai. My nickname is Patty.
+      I am twenty-three years old.entation and Electronic engineering student 
+      at King Mongkut’s university of technology north Bangkok.</p>
       
       
       <div class="click">
